--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Oscar Djihokin</h1>
+    <p><strong>Localisation :</strong> Bénin</p>
+    <p><strong>Email :</strong> oscardjihokin6@gmail.com</p>
+
 </body>
 </html>
