--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="section">
+        <h2>Description</h2>
+        <p>Passionné de cybersécurité et de programmation, spécialisé en pentesting et développement.</p>
+    </div>
 </body>
 </html>
