--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="section">
+        <h2>Formations</h2>
+        <p>Étudiant en informatique, spécialisation cybersécurité.</p>
+    </div>
 </body>
 </html>
