--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="section">
+        <h2>Compétences</h2>
+        <ul>
+            <li>Pentesting (Metasploit, Netcat, Gobuster)</li>
+            <li>Programmation (C, Bash, PHP)</li>
+            <li>Linux & Sécurité réseau (Ubuntu, Kali, iptables)</li>
+        </ul>
+    </div>
+
 </body>
 </html>
