mise en place de la section associations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="section">
+        <h2>Associations</h2>
+        <p>Membre de Hack The Box, TryHackMe, picoCTF.</p>
+    </div>
 </body>
 </html>
